# api/main.go
@@ -8,13 +8,15 @@ import (
 	"github.com/callicoder/packer/services"
 	"github.com/jinzhu/gorm"
 	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
 	_ "github.com/mattn/go-sqlite3"
 	"github.com/robfig/cron"
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
 func helloWorld(c echo.Context) error {
-	return c.HTML(http.StatusOK, "<h1>Hello, this is the backend of TeamSpirit POC!</h1><h3>You can see actual API on : </h3><a href='http://localhost:3000/swagger/index.html'>Swagger index page</a><p>(As default for devs, if on another env. please check real path)</p>")}
+	return c.HTML(http.StatusOK, "<h1>Hello, this is the backend of TeamSpirit POC!</h1><h3>You can see actual API on : </h3><a href='http://localhost:3000/swagger/index.html'>Swagger index page</a><p>(As default for devs, if on another env. please check real path)</p>")
+}
 
 func handleResquests() {
 	e := echo.New()
@@ -26,25 +28,58 @@ func handleResquests() {
 
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
-	// Autentication routes
+	// **** Autentication routes ****
 	e.POST("/access", services.AccessToSurvey)
 
-	// Servies routes
+	// login
+	e.POST("/login", services.Login)
 
-	e.GET("/survies", services.GetSurvies)
-	e.GET("/survey/:surveyCode", services.GetSurvey)
-	e.POST("/survey/create", services.CreateSurvey)
-	e.PUT("/survey/:surveyCode", services.UpdateSurvey)
-	e.DELETE("/survey/:surveyCode", services.DeleteSurvey)
-	e.POST("/survey/:surveyCode/addNotes", services.AddNotesToSurvey)
-	e.GET("/survey/result/:surveyCode", services.GetResultSurvey)
+	// Register
+	e.POST("/register", services.Register)
 
-	// Temas routes
-	e.GET("/teams", services.GetTeams)
-	e.GET("/team/:teamName", services.GetTeam)
-	e.POST("/team/create", services.CreateTeam)
-	e.PUT("/team/:teamName", services.UpdateTeam)
-	e.DELETE("/team/:teamName", services.DeleteTeam)
+	// Guards Config
+	r := e.Group("")
+
+	config := middleware.JWTConfig{
+		Claims:     &entities.JwtCustomClaims{},
+		SigningKey: []byte("secret"),
+	}
+
+	r.Use(middleware.JWTWithConfig(config))
+
+	// Get the connected user
+	r.GET("/me", services.CurrentUser)
+
+	// **** users routes *****
+	e.POST("/user/create", services.CreateUser)
+	e.GET("/users", services.GetUsers)
+	e.GET("/user/:id", services.GetUser)
+	e.DELETE("/user/:id", services.DeleteUser)
+	e.PUT("/user/:id", services.UpdateUser)
+
+	// **** Roles routes *****
+	r.GET("/role/:id", services.GetRole)
+	r.GET("/roles", services.GetRoles)
+	r.POST("/role/create", services.CreateRole)
+	r.DELETE("/role/:id", services.DeleteRole)
+	r.PUT("/role/:id", services.UpdateRole)
+
+	// ***** Servies routes *****
+
+	r.GET("/survies", services.GetSurvies)
+	r.GET("/survey/:surveyCode", services.GetSurvey)
+	r.POST("/survey/create", services.CreateSurvey)
+	r.PUT("/survey/:surveyCode", services.UpdateSurvey)
+	r.DELETE("/survey/:surveyCode", services.DeleteSurvey)
+	r.POST("/survey/:surveyCode/addNotes", services.AddNotesToSurvey)
+	r.GET("/survey/result/:surveyCode", services.GetResultSurvey)
+
+	// **** Temas routes *****
+	r.GET("/teams", services.GetTeams)
+	r.GET("/team/:teamName", services.GetTeam)
+	r.POST("/team/create", services.CreateTeam)
+	r.PUT("/team/:teamName", services.UpdateTeam)
+	r.DELETE("/team/:teamName", services.DeleteTeam)
 
 	// serve
 	e.Logger.Fatal(e.Start(":3000"))
@@ -83,7 +118,7 @@ func main() {
 
 	defer DB.Close()
 
-	DB.AutoMigrate(&entities.Survey{}, &entities.Note{}, &entities.Team{})
+	DB.AutoMigrate(&entities.Survey{}, &entities.Note{}, &entities.User{}, &entities.Role{}, &entities.Team{})
 
 	c := cron.New()
 
